--- a/app/views/routes/_route.html.erb
+++ b/app/views/routes/_route.html.erb
@@ -27,6 +27,10 @@
     <div>
       <h3 class="text-lg font-semibold mb-3">Details</h3>
       <p class="mb-2">
+        <strong class="block font-medium text-gray-600">Samsara ID:</strong>
+        <%= route.samsara_id %>
+      </p>
+      <p class="mb-2">
         <strong class="block font-medium text-gray-600">Driver:</strong>
         <%= route.driver&.name %>
       </p>
