--- a/app/views/stops/show.html.erb
+++ b/app/views/stops/show.html.erb
@@ -9,9 +9,10 @@
 
   <%= render @stop %>
 
-  <%= link_to "Edit this stop", edit_stop_path(@stop), class: "mt-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-  <%= link_to "Back to stops", stops_path, class: "ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-  <div class="inline-block ml-2">
-    <%= button_to "Destroy this stop", @stop, method: :delete, class: "mt-2 rounded-md px-3.5 py-2.5 text-white bg-red-600 hover:bg-red-500 font-medium" %>
-  </div>
+  <% if @stop.live_sharing_url.present? %>
+    <%= link_to "View live tracking", @stop.live_sharing_url, class: "mt-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+  <% end %>
+
+  <%= link_to "Edit this stop", edit_route_stop_path(@stop.route, @stop), class: "mt-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+  <%= link_to "Back to stops", route_stops_path(@stop.route), class: "ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
 </div>
