--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -16,16 +16,15 @@
     <%= form.text_field :name, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": route.errors[:name].none?, "border-red-400 focus:outline-red-600": route.errors[:name].any?}] %>
   </div>
 
-  <div class="my-5">
+  <%# <div class="my-5">
     <%= form.label :scheduled_start_time %>
-    <%= form.datetime_field :scheduled_start_time, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": route.errors[:scheduled_start_time].none?, "border-red-400 focus:outline-red-600": route.errors[:scheduled_start_time].any?}] %>
-  </div>
+    <%#= form.datetime_field :scheduled_start_time, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": route.errors[:scheduled_start_time].none?, "border-red-400 focus:outline-red-600": route.errors[:scheduled_start_time].any?}] %>
+  <%# </div> %>
 
-  <div class="my-5">
+  <%# <div class="my-5">
     <%= form.label :scheduled_end_time %>
-    <%= form.datetime_field :scheduled_end_time, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": route.errors[:scheduled_end_time].none?, "border-red-400 focus:outline-red-600": route.errors[:scheduled_end_time].any?}] %>
-  </div>
-
+    <%#= form.datetime_field :scheduled_end_time, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": route.errors[:scheduled_end_time].none?, "border-red-400 focus:outline-red-600": route.errors[:scheduled_end_time].any?}] %>
+  <%# </div> %>
   <div class="inline">
     <%= form.submit class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
   </div>
