--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -225,12 +225,18 @@
         <%= f.submit "Add Stop", class: "inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" %>
       <% end %>
     </div>
-
-    <div class="mt-8 mb-8 hidden md:block">
-      <%= link_to "Edit this route", edit_route_path(@route), class: "mt-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-      <%= link_to "Back to routes", routes_path, class: "ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-      <div class="inline-block ml-2">
-        <%= button_to "Destroy this route", @route, method: :delete, class: "mt-2 rounded-md px-3.5 py-2.5 text-white bg-red-600 hover:bg-red-500 font-medium" %>
+    <div class="mt-8 mb-8 flex flex-row items-center space-x-2">
+      <div>
+        <%= link_to "Edit this route", edit_route_path(@route), class: "rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+      </div>
+      <div>
+        <%= link_to "Back to routes", routes_path, class: "rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+      </div>
+      <div>
+        <%= button_to "Force Sync", route_path(@route), method: :patch, params: { route: { name: @route.name }}, class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium" %>
+      </div>
+      <div>
+        <%= button_to "Destroy this route", @route, method: :delete, class: "rounded-md px-3.5 py-2.5 text-white bg-red-600 hover:bg-red-500 font-medium" %>
       </div>
     </div>
   </div>
